      entries that shouldn't be syntax-checked in the long description for
      syntax-error-in-debian-changelog.  (Closes: #541119)
  * checks/debconf:
    + [CW] Permit Help: in .templates files, which is supported as of
      cdebconf 0.143 and used in the installer.
  * checks/debhelper{,.desc}:
    + [CW] Check for the use of debhelper override targets, which require
      debhelper 7.0.50.
  * checks/description:
    + [RA] Decode descriptions from UTF-8 before checking length.  Thanks,
      Charles Plessy.  (Closes: #537207)
  * checks/fields{,.desc}
    + [FL] packages named lib*-camlp4-dev should be in section ocaml
    + [RA] Move debian/rules parsing to check build dependencies to
      checks/rules.
    + [RA] Allow any package to be in section oldlibs without triggering
      warnings.  Thanks, Rene Engelhard.  (Closes: #537606)
    + [RA] Lower wrong-section-according-to-package-name to possible.
  * checks/files{,.desc}:
    + [CW] /var/lock and /var/run are not temporary filesystems in d-i, so
      don't emit errors about their use in udebs.
    + [RA] Warn about packages containing files in /etc/ld.so.conf.d that
      don't appear to be part of libc.  Policy 3.8.3 no longer permits
      modification of ld.so.conf.
    + [RA] Remove the check for x11-common pre-depends before installing
      files in /usr/{include,lib}/X11.  Policy 3.8.3 removes this
      requirement.
  * checks/infofiles{,.desc}:
    + [RA] Add missing leading * to example info directory entry.
    + [RA] Check that packages with info files depend on dpkg or
      install-info as recommended by Policy 5.8.3.
  * checks/lintian.desc:
    + [RA] Expand multiple-distributions-in-changes-file description and
      add a reference to the Policy section.  Change certainty to
      possible, since this may be fine for non-Debian uploads.
  * checks/menus{,.desc}:
    + [RA] Add info-level tag for packages with apparent HTML or PDF